--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,12 @@
-Hello!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Start</title>
+</head>
+<body>
+    <h2>Start</h2>
+    
+</body>
+</html>
